- Update swagger docummentation - Create ticket feature - Update tickets by category
