# controllers/ticket.js
@@ -1,5 +1,4 @@
 import models from '../models/index';
-import { async } from 'rxjs/internal/scheduler/async';
 
 const { Ticket, TicketCategory, User, Event } = models;
 
@@ -16,8 +15,22 @@ class TicketController {
    * @returns {Object} Response
    */
   async createTicket(req, res) {
+    const { slug } = req.params;
+    const { price, category } = req.body;
+    const createdTicketSummary = [];
+    const { id } = req.organizer;
+    const availableTickets = [];
 
-    const createTicketsByCategory = async(category) => {
+    const allTickets = await TicketCategory.findAll({});
+
+    allTickets.forEach(item => {
+      availableTickets.push({
+        name: item.designation.toUpperCase(),
+        id: item.id
+      });
+    });
+
+    const createTicketsByCategory = async (category, number, price) => {
       const newTicket = {
         price,
         category,
@@ -25,82 +38,49 @@ class TicketController {
         event: slug,
         status: 'available'
       };
-  
-      let count = await Ticket.count({organizer: id, event: slug});
 
-      const ticketCategory = await TicketCategory.findOne({
-        where: { id: category }
-      });
-  
-      if (!ticketCategory) {
-        return res.status(400).send({
-          status: 400,
-          error: "ticket category doesn't exit"
-        })
-      }    
-      
+      let count = await Ticket.count({ organizer: id, event: slug });
+
       for (let i = 1; i <= number; i++) {
         count += 1;
         newTicket.ticketNumber = count;
         const createdTicket = await Ticket.create(newTicket);
       }
-      const currentOrganizer = await User.findOne({ where: { id } });
-      const currentEvent = await Event.findOne({ where: { slug } });    
-  
-      const newCategory = {
-        id: ticketCategory.id,
-        designation: ticketCategory.designation
-      };
-  
-      const newOrganizer = {
-        id: currentOrganizer.id,
-        firstName: currentOrganizer.firstName,
-        lastName: currentOrganizer.lastName,
-        userName: currentOrganizer.userName,
-        email: currentOrganizer.email,
-        avatar: currentOrganizer.avatar
-      };
-  
-      const newEvent = {
-        slug: currentEvent.slug,
-        title: currentEvent.title,
-        description: currentEvent.description,
-        location: currentEvent.location
-      };
-  
-      const newCreatedTicket = {
-        message: `${number} tickets created successfully.`,
-        category: newCategory,
-        organizer: newOrganizer,
-        event: newEvent
-      };
-      return newCreatedTicket
-    }
-    const { slug } = req.params;
-    const { price, number, ...categoryList } = req.body;
-    const { id } = req.organizer;
-
-    const categoryMapper = async(category) => {
-      const res = await TicketCategory.findAll({})
-      
-      console.log('7568768989', res);
-      
-      const object = [{name: 'table', id: 1}, {name: 'vip', id: 2}, {name: 'vvip', id: 3}]
-      
-      return object.find(({name}) => name === category);
-      
     };
-    
-    for (const category in categoryList) {
-      const number = categoryList[category]
-      const categoryId = await categoryMapper(category)
 
-      console.log(number, categoryId);
+    const categoryMapper = category => {
+      return availableTickets.find(({ name }) => name === category);
+    };
 
+    for (const ticket in category[0]) {
+      const ticketsPerCategory = category[0][ticket];
+      const availableCategory = await categoryMapper(ticket.toUpperCase());
+      if (availableCategory) {
+        const ticketPrice = price[0][ticket];
+        await createTicketsByCategory(
+          availableCategory.id,
+          ticketsPerCategory,
+          ticketPrice
+        );
+        const summary = {
+          category: availableCategory.name,
+          tickets: ticketsPerCategory,
+          price: ticketPrice
+        };
+        createdTicketSummary.push(summary);
+      }
     }
 
-    // const newTickets = createTicketsByCategory(category)
-    // res.status(201).json({ status: 201, newTickets });
+    if (createdTicketSummary.length == 0) {
+      return res.status(204).json({
+        status: 204,
+        message: 'No tickets created, Ticket category does not exist.',
+        createdTicketSummary
+      });
+    }
+    res
+      .status(201)
+      .json({ status: 201, message: 'success', createdTicketSummary });
   }
 
   /**
@@ -154,7 +134,14 @@ class TicketController {
           attributes: { exclude: ['createdAt', 'updatedAt'] }
         }
       ],
-      attributes: ['id', 'price', 'ticketNumber', 'status', 'createdAt', 'updatedAt']
+      attributes: [
+        'id',
+        'price',
+        'ticketNumber',
+        'status',
+        'createdAt',
+        'updatedAt'
+      ]
     });
     res.status(200).json({ status: 200, tickets });
   }
@@ -214,7 +201,14 @@ class TicketController {
           attributes: { exclude: ['createdAt', 'updatedAt'] }
         }
       ],
-      attributes: ['id', 'price', 'ticketNumber', 'status', 'createdAt', 'updatedAt']
+      attributes: [
+        'id',
+        'price',
+        'ticketNumber',
+        'status',
+        'createdAt',
+        'updatedAt'
+      ]
     });
     res.status(200).json({ status: 200, ticket });
   }
@@ -272,7 +266,14 @@ class TicketController {
           attributes: { exclude: ['createdAt', 'updatedAt'] }
         }
       ],
-      attributes: ['id', 'price', 'ticketNumber', 'status', 'createdAt', 'updatedAt']
+      attributes: [
+        'id',
+        'price',
+        'ticketNumber',
+        'status',
+        'createdAt',
+        'updatedAt'
+      ]
     });
     res.status(200).json({ status: 200, ticket });
   }
@@ -294,12 +295,86 @@ class TicketController {
       organizer: id,
       event: slug
     };
-    
 
     const updatedTicket = await Ticket.update(updateTicket, {
       where: { ticketNumber: ticketId, event: slug }
     });
     res.status(200).json({ status: 200, updateTicket });
+  }
+
+  /**
+   *
+   * @param {Object} req - Requests from client
+   * @param {*} res - Response from the db
+   * @returns {Object} Response
+   */
+  async updateTicketsByCategoty(req, res) {
+    const { id } = req.organizer;
+    const { slug } = req.params;
+    const { price, status } = req.body;
+    const availableTickets = [];
+
+    const allTickets = await TicketCategory.findAll({});
+
+    allTickets.forEach(item => {
+      availableTickets.push({
+        name: item.designation.toUpperCase(),
+        id: item.id
+      });
+    });
+
+    const updateTicketsByCategory = async (category, price, status) => {
+      const updateTicket = {
+        price,
+        organizer: id,
+        event: slug,
+        status
+      };
+
+      const updatedTicket = await Ticket.update(updateTicket, {
+        where: { category, event: slug }
+      });
+    };
+
+    const categoryMapper = category => {
+      return availableTickets.find(({ name }) => name === category);
+    };
+    const updatedSummary = [];
+
+    if (price.length !== 0) {
+      for (const ticket in price[0]) {
+        const ticketPrice = price[0][ticket];
+        const availableCategory = await categoryMapper(ticket.toUpperCase());
+        if (availableCategory) {
+          await updateTicketsByCategory(availableCategory.id, ticketPrice);
+          const summary = {};
+          summary.ticket = availableCategory.name;
+          summary.price = ticketPrice;
+          updatedSummary.push(summary);
+        }
+      }
+    }
+
+    if (status.length !== 0) {
+      for (const ticket in status[0]) {
+        const newStatus = status[0][ticket];
+        const availableCategory = await categoryMapper(ticket.toUpperCase());
+        if (availableCategory) {
+          await updateTicketsByCategory(
+            availableCategory.id,
+            undefined,
+            newStatus
+          );
+          const summary = {};
+          summary.ticket = availableCategory.name;
+          summary.status = newStatus;
+          updatedSummary.push(summary);
+        }
+      }
+    }
+    res
+      .status(200)
+      .json({ status: 200, message: 'updated successfully', updatedSummary });
   }
 }
 
